log
Fri 12 May 2023 06:06:23 PM UTC: 
 tests:  0|6
total_score: 0/70
58076b2
Fri 12 May 2023 06:09:54 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
742f811
Fri 12 May 2023 06:10:06 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d8ac05c
Wed 17 May 2023 01:46:02 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:10: error: unused variable ‘indice’ [-Werror=unused-variable]
   43 |     long indice = hash(key, map->capacity);
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f3ccb93
Wed 17 May 2023 01:52:43 AM UTC: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ada2110
Wed 17 May 2023 01:58:00 AM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|3
total_score: 40/70
45d0227
